WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70495
When user is panning with the tiled backing store, the page isn't notified about the scroll position change
https://bugs.webkit.org/show_bug.cgi?id=70495
Summary
When user is panning with the tiled backing store, the page isn't notified ab...
Kenneth Rohde Christiansen
Reported
2011-10-20 05:34:53 PDT
SSIA
Attachments
Patch
(4.44 KB, patch)
2011-10-20 08:00 PDT
,
Kenneth Rohde Christiansen
hausmann
: review+
hausmann
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.42 KB, patch)
2011-10-20 08:39 PDT
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2011-10-20 08:00:32 PDT
Created
attachment 111772
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-20 08:02:18 PDT
Attachment 111772
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/page/FrameView.h:168: The parameter name "visibleContentRect" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Hausmann
Comment 3
2011-10-20 08:21:41 PDT
Comment on
attachment 111772
[details]
Patch r=me modulo the style warning :)
Kenneth Rohde Christiansen
Comment 4
2011-10-20 08:39:43 PDT
Created
attachment 111780
[details]
Patch
WebKit Review Bot
Comment 5
2011-10-20 09:47:42 PDT
Comment on
attachment 111780
[details]
Patch Clearing flags on attachment: 111780 Committed
r97989
: <
http://trac.webkit.org/changeset/97989
>
WebKit Review Bot
Comment 6
2011-10-20 09:47:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug